[gd_scene load_steps=4 format=3 uid="uid://cwfdlqi64frpu"]

[ext_resource type="Script" path="res://main.gd" id="1_h7dkv"]
[ext_resource type="Texture2D" uid="uid://civ31b5u26cui" path="res://Resources/Main_Background.png" id="2_sjbue"]
[ext_resource type="Texture2D" uid="uid://bnv1rgw8obsd2" path="res://Resources/Termial_Infection_logo.png" id="3_sxan5"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h7dkv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(639, 359)
texture = ExtResource("2_sjbue")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 70.0
offset_right = 35.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Online" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Online"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(640, 170)
texture = ExtResource("3_sxan5")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Online" to="." method="_on_online_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
